Fix card fontstyling and page spacing

--- a/src/components/Card/index.css
+++ b/src/components/Card/index.css
@@ -52,5 +52,8 @@
   color: #EEE;
   width: 50%;
   margin-left: 25%;
+  font-family: "Roboto";
+  font-weight: 100;
+  line-height: 1.1;
   @media (max-width: 800px) { font-size: 30px;}
 }
